Segunda y ultima carga de archivos
Se corrigen todos los errores.

--- a/style.css
+++ b/style.css
@@ -38,3 +38,16 @@ html{
 .resultados{
     font-size: 16px;
 }
+
+table,tr,td,th{
+    border: darkslategray 2px solid;
+    padding: 5px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+
+table{
+    width: 100%;
+    border-radius: 10px;
+}
